kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/refresh-token-network: "true"
        io.kompose.network/user-network: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:5.0
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: deall-mongo-volume
      restartPolicy: Always
      volumes:
        - name: deall-mongo-volume
          persistentVolumeClaim:
            claimName: deall-mongo-volume
status: {}
