kubernetes/refresh-token-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: refresh-token-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/refresh-token-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/refresh-token-network: "true"
